<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/twenty_dp">

    <TextView
        android:id="@+id/textView_dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:gravity="center"
        android:text="@string/reg_sucess"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_25" />

    <TextView
        android:id="@+id/textView_dialogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_dialogTitle"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center"
        android:text="@string/reg_desc"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16" />
    <TextView
        android:id="@+id/textView_dialogDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_dialogDesc"
        android:layout_marginTop="@dimen/two_dp"
        android:gravity="center"

        android:text="@string/reg_desc2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16" />

    <ImageView
        android:id="@+id/imageView_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hundred_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:layout_below="@+id/textView_dialogDesc2"
        android:src="@drawable/check_pop_icon" />

</RelativeLayout>