<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_forgetusername_full"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_recovery"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/black"
        android:id="@+id/textView_username_recovery"/>

    <ImageView
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/hundred_dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView_username_recovery"
        android:src="@drawable/username_recover_icon"
        android:layout_marginTop="@dimen/twenty_dp"
        android:scaleType="fitXY"
        android:id="@+id/imageView_icon_recovery"/>

    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:paddingBottom="@dimen/ten_dp"
        android:layout_below="@+id/imageView_icon_recovery">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/recovery_email"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:id="@+id/textView_recovery_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/tap_enter"
            android:gravity="center"
            android:lines="1"
            android:cursorVisible="false"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@drawable/custom_edittext_cursor_green"
            android:background="@null"
            android:textColorHint="@color/colorPrimary"
            android:layout_below="@+id/textView_recovery_email"
            android:id="@+id/editText_email_forgetusername"/>

        <TextView
            android:id="@+id/textView_forgetusername_error_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email_forgetusername"
            android:layout_marginTop="@dimen/three_dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/password"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_submit_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_below="@+id/email_layout"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:background="@drawable/orange_button_empty">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fifty_dp"
            android:text="@string/submit_request"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:layout_centerInParent="true"
            android:id="@+id/textView2"/>
    </RelativeLayout>

</RelativeLayout>