<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_forgetpassword_full"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

    <include layout="@layout/toolbar"/>

    <!--<RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="@dimen/fifteen_dp"
            android:layout_height="@dimen/fifteen_dp"
            android:src="@drawable/back_arrow"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:id="@+id/imageView_backarrow"/>

        <View
            android:id="@+id/line"
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/imageView_backarrow"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginBottom="@dimen/fifteen_dp"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:background="@color/grey" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_18"
            android:layout_toRightOf="@+id/line"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:text="@string/app_name"
            android:id="@+id/textView_appname"/>

    </RelativeLayout>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_recovery"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/black"
        android:id="@+id/textView_username_recovery"/>

    <ImageView
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/hundred_dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView_username_recovery"
        android:src="@drawable/pass_recovery_icon"
        android:layout_marginTop="@dimen/twenty_dp"
        android:scaleType="fitXY"
        android:id="@+id/imageView_icon_recovery"/>

    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_below="@+id/imageView_icon_recovery">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/recovery_email"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:id="@+id/textView_recovery_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty_dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/tap_enter"
            android:fontFamily="@string/tap_enter"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:cursorVisible="false"
            android:textCursorDrawable="@drawable/custom_edittext_cursor_green"
            android:background="@null"
            android:textColorHint="@color/colorPrimary"
            android:layout_below="@+id/textView_recovery_email"
            android:id="@+id/editText_email"/>

        <TextView
            android:id="@+id/textView_forgetpassword_error_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email"
            android:layout_marginTop="@dimen/three_dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:text="@string/password"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_subit_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_below="@+id/email_layout"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:background="@drawable/orange_button_empty">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fifty_dp"
            android:text="@string/submit_request"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:layout_centerInParent="true"
            android:id="@+id/textView2"/>
    </RelativeLayout>

</RelativeLayout>